feat(flappy): inclusao de level e melhorias no aumento de velocidade.

--- a/flappy.html
+++ b/flappy.html
@@ -10,7 +10,8 @@
 <body>
     <div class="cabecalhoJogo">
         <h1>Flappy Bird</h1>
-        <h2 id="counting" class="counting">0</h2>
+        <h2 id="level" class="score">0</h2>
+        <h2 id="score" class="score">0</h2>
     </div>
     <div wm-flappy class="conteudo">
         <img src="imgs/passaro.png">
